--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,1 +1,40 @@
-<!DOCUMENT>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Travel Recomendation</title>
+  <link rel="stylesheet" href="./travel_recomendation.css">
+</head>
+<body>
+   <nav><h1>Travel Recomendation</h1>
+<ul>
+    <li><a href="./travel_recomendation.html" id="home">Home </a></li>
+    <li><a href="./about_us.html" id="about_us">About Us </a></li>
+    <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
+    <li><input type="text" id="conditionInput" placeholder="Enter a destination or keyword">  </li>
+    <li><button id='btnSearch'>Search</button></li>
+    <li><button id='btnClear'>Clear</button></li>
+</ul>
+
+</nav>
+<div class="container">
+    <div class="analysisForm">
+        <h1>Healthcare Data Analysis</h1>
+        <p>It encourages exploration of unfamiliar territories,</p>
+        <p>embracing diverse cultures and landscapes, while pursuing</p>
+        <p>the desired destination that captivates the heart and ignites a sense of wonder</p>
+    <div>
+
+</div>
+
+<button id="bookBtn">BOOK NOW</button>
+    <h2>Report</h2>
+<div id="report"></div>
+</div>
+<div class="searchCondition">
+    <div id="result"></div>
+</div>
+</div>
+<script src="./travel_recommendation.js"></script>
+</body>
+</html>
