--- a/about_us.html
+++ b/about_us.html
@@ -52,9 +52,17 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>About Us</h1>
-    </header>
+    <nav><h1>Travel Recomendation</h1>
+        <ul>
+            <li><a href="./travel_recomendation.html" id="home">Home </a></li>
+            <li><a href="./about_us.html" id="about_us">About Us </a></li>
+            <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
+            <li><input type="text" id="destinationInput" placeholder="Enter a destination or keyword">  </li>
+            <li><button id='btnSearch'>Search</button></li>
+            <li><button id='btnClear'>Clear</button></li>
+        </ul>
+      <h1>About Us</h1>
+
     <div class="container">
         <section class="main">
             <h2>Welcome to Wanderlust Travel Agency</h2>
@@ -80,5 +88,7 @@
             </div>
         </section>
     </div>
+
+    <script src="./travel_recommendation.js"></script>
 </body>
 </html>
