--- a/contact_us.html
+++ b/contact_us.html
@@ -31,12 +31,12 @@
   </style>
 </head>
 <body>
-  <   <nav><h1>Travel Recomendation</h1>
+ <nav><h1>Travel Recomendation</h1>
     <ul>
         <li><a href="./travel_recomendation.html" id="home">Home </a></li>
         <li><a href="./about_us.html" id="about_us">About Us </a></li>
         <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
-        <li><input type="text" id="conditionInput" placeholder="Enter a destination or keyword">  </li>
+        <li><input type="text" id="destinationInput" placeholder="Enter a destination or keyword">  </li>
         <li><button id='btnSearch'>Search</button></li>
         <li><button id='btnClear'>Clear</button></li>
     </ul>
@@ -67,5 +67,6 @@
         alert('Thank you for contacting us!')
     }
   </script>
+      <script src="./travel_recommendation.js"></script>
 </body>
 </html>
