--- a/about_us.html
+++ b/about_us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Wanderlust Travel Agency</title>
+    <link rel="stylesheet" href="./travel_recommendation.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,12 +55,9 @@
 <body>
     <nav><h1>Travel Recomendation</h1>
         <ul>
-            <li><a href="./travel_recomendation.html" id="home">Home </a></li>
+            <li><a href="./travel_recommendation.html" id="home">Home </a></li>
             <li><a href="./about_us.html" id="about_us">About Us </a></li>
             <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
-            <li><input type="text" id="destinationInput" placeholder="Enter a destination or keyword">  </li>
-            <li><button id='btnSearch'>Search</button></li>
-            <li><button id='btnClear'>Clear</button></li>
         </ul>
       <h1>About Us</h1>
 
