--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Travel Recomendation</title>
-  <link rel="stylesheet" href="./travel_recomendation.css">
+  <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
 <body>
    <nav><h1>Travel Recomendation</h1>
@@ -19,7 +19,7 @@
 </nav>
 <div class="container">
     <div class="analysisForm">
-        <h1>Healthcare Data Analysis</h1>
+        <h1>EXPLORE DREAM DESTINATIONS</h1>
         <p>It encourages exploration of unfamiliar territories,</p>
         <p>embracing diverse cultures and landscapes, while pursuing</p>
         <p>the desired destination that captivates the heart and ignites a sense of wonder</p>
@@ -27,8 +27,7 @@
 
 </div>
 
-<button id="bookBtn">BOOK NOW</button>
-    <h2>Report</h2>
+
 <div id="report"></div>
 </div>
 <div class="searchCondition">
