--- a/contact_us.html
+++ b/contact_us.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Us</title>
+  <link rel="stylesheet" href="./travel_recommendation.css">
   <style>
     body{
         text-align: center;
@@ -33,12 +34,9 @@
 <body>
  <nav><h1>Travel Recomendation</h1>
     <ul>
-        <li><a href="./travel_recomendation.html" id="home">Home </a></li>
+        <li><a href="./travel_recommendation.html" id="home">Home </a></li>
         <li><a href="./about_us.html" id="about_us">About Us </a></li>
         <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
-        <li><input type="text" id="destinationInput" placeholder="Enter a destination or keyword">  </li>
-        <li><button id='btnSearch'>Search</button></li>
-        <li><button id='btnClear'>Clear</button></li>
     </ul>
   <h1>Contact Us</h1>
   <p>Feel free to contact us to know more about our travelling directions.</p>
