--- a/about_us.html
+++ b/about_us.html
@@ -53,14 +53,15 @@
     </style>
 </head>
 <body>
-    <nav><h1>Travel Recomendation</h1>
+    <nav>
+        <h1>Travel Recomendation</h1>
         <ul>
             <li><a href="./travel_recommendation.html" id="home">Home </a></li>
             <li><a href="./about_us.html" id="about_us">About Us </a></li>
             <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
         </ul>
-      <h1>About Us</h1>
-
+    </nav>
+    <h1>About Us</h1>
     <div class="container">
         <section class="main">
             <h2>Welcome to Wanderlust Travel Agency</h2>
