--- a/contact_us.html
+++ b/contact_us.html
@@ -38,6 +38,7 @@
         <li><a href="./about_us.html" id="about_us">About Us </a></li>
         <li><a href="./contact_us.html" id="contact">Contact Us </a></li>
     </ul>
+</nav>
   <h1>Contact Us</h1>
   <p>Feel free to contact us to know more about our travelling directions.</p>
 
